--- a/src/component/entity/Mod.scss
+++ b/src/component/entity/Mod.scss
@@ -48,6 +48,7 @@
         .label {
             display: inline-block;
             flex-basis: 100px;
+            flex-shrink: 0;
             text-align: right;
         }
 
